modification text welcome page + add no filter option

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,10 +9,11 @@
     <div class="text">
       <h2>Never Stop To </h2> 
       <h3>Exploring The World</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
+      <p>Wander gives you the possibility to save your favorite places 
+        all over the world, to add a description and with a tag. 
+        <br>
+        <br>
+        This project was created during Ironhack bootcamp in 5 days. </p>
     <a href="/login">Log In</a>
     <a href="/signup">Sign Up</a>
    
