--- a/views/user/placeList.hbs
+++ b/views/user/placeList.hbs
@@ -35,6 +35,7 @@
     <option value="Club">Club, Party!!!</option>
   </select>
   <button type="submit">Filter</button>
+  <a href="/favoritesPlaces">No filter </a>
 </form>
 </div>
 <div class="card-footer">
