--- a/views/user/homePage.hbs
+++ b/views/user/homePage.hbs
@@ -29,8 +29,8 @@
                 <img src="pic.png" alt="">
           </div>
         </div>
-        <div class="name">Welcome Lila</div>
-       <div class="desc">share your Map</div> 
+        <div class="name">Welcome</div>
+       <div class="desc">Search and save your favoties places</div> 
         <div class="sm ">
           <a href="#" class="fab fa-facebook-f"></a>
           <a href="#" class="fab fa-twitter"></a>
