--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -142,8 +142,11 @@ label #cancel{
   text-align: center;
   border-radius: 0px 0px 0px 0px;
   overflow: hidden; 
+  color: #00b7ff;
   /* background-color: blueviolet;*/
 }
+
+
 
 
 .card-header{
@@ -308,6 +311,16 @@ margin: 30px 0;
  
 }
 */ 
+
+.form {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  display: inline-block
+}
 
 
 .buttonUser {
