correction typo index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
       <h2>Never Stop To </h2> 
       <h3>Exploring The World</h3>
       <p>Wander gives you the possibility to save your favorite places 
-        all over the world, to add a description and with a tag. 
+        all over the world, to add a description and create a tag. 
         <br>
         <br>
         This project was created during Ironhack bootcamp in 5 days. </p>
